# fetchrules

./: fetchrules.cabal
TRS/: FetchRules.hs
instances/Auto/: fetchrules-auto.cabal
instances/Auto/TRS/FetchRules/: Auto.hs
instances/TRS/: fetchrules-trs.cabal
instances/TRS/TRS/FetchRules/: TRS.hs
instances/TTT/: fetchrules-ttt.cabal
instances/TTT/TRS/FetchRules/: TTT.hs
