name:                fetchrules
version:             0.2
synopsis:            <Project description>
description:         <Project description>
category:            Language
license:             AllRightsReserved
license-file:        LICENSE
author:              pepe
maintainer:          mnislaih@gmail.com
build-Depends:       base, TRS >= 0.13, TTTParser, TRSParser, OBJParser, parsec < 3.0, mtl, alacarte, filepath
ghc-options:         
exposed-modules:     TRS.FetchRules