name:                fetchrules
version:             0.2
synopsis:            This package provides a bridge between the TRS package and parsers
description:         This package provides a bridge between the TRS package and parsers
category:            Language
license:             AllRightsReserved
license-file:        LICENSE
author:              pepe iborra
maintainer:          mnislaih@gmail.com
build-Depends:       base, TRS >= 0.17, parsec < 3.0, mtl
ghc-options:         
exposed-modules:     TRS.FetchRules