name:                fetchrules-trs
version:             0.1
synopsis:            
description:         Instances for the TRS parser
category:            Language
license:             AllRightsReserved
license-file:        LICENSE
author:              pepe iborra
maintainer:          mnislaih@gmail.com

Flag base4
   default: True
Flag transformers
   default: False
      
Library
  build-Depends:   TRS >= 0.13, fetchrules, TRSParser
  if flag(base4)  
    build-depends: base >= 4, syb
  else 
    build-depends: base
  if flag(transformers)
     build-depends: transformers
  else
     build-depends: mtl

  ghc-options:         
  exposed-modules:     TRS.FetchRules.TRS
