name:                fetchrules-ttt
version:             0.1
synopsis:            This package provides a bridge between the TRS package and parsers
description:         Instances for the TTT parser
category:            Language
license:             AllRightsReserved
license-file:        LICENSE
author:              pepe iborra
maintainer:          mnislaih@gmail.com
build-Depends:       base, TRS >= 0.13, fetchrules, TTTParser, mtl
ghc-options:         
exposed-modules:     TRS.FetchRules.TTT