name:                fetchrules-ttt
cabal-version:       >= 1.2
build-type:          Simple
version:             0.1
synopsis:            This package provides a bridge between the TRS package and parsers
description:         Instances for the TTT parser
category:            Language
license:             AllRightsReserved
license-file:        LICENSE
author:              pepe iborra
maintainer:          mnislaih@gmail.com


Flag base4
   default: True
      
Library
  build-Depends:   TRS >= 0.13, fetchrules, TTTParser
  exposed-modules:     TRS.FetchRules.TTT
  if flag(base4)  
    build-depends: base >= 4, syb
  else 
    build-depends: base
